[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.40.0"]

[project]
authors = [{email = "gridtools@cscs.ch"}, {name = "ETH Zurich"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "gt4py>=1.0.1"
]
description = "Shared code for the icon4py model."
dynamic = ['version']
license = {file = "LICENSE"}
name = "icon4py-common"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = ["icon4py-common[ghex,io]"]
ghex = ["ghex", "mpi4py>=3.1.4", "pymetis>2022.1"]
io = [
  "icon4py-common[netcdf]",
  "xarray[complete]>=2024.3.0",
  # TODO [magdalena] there are failing tests starting from uxarray==2024.4.0: when a data file does not have
  # fields of a given dimension (eg 'edge') then something in uxarray goes wrong with the dimension
  # mapping. It is not yet clear whether this is a uxarray bug or on our side.
  "uxarray==2024.3.0",
  "scikit-learn>=1.4.0",
  "holoviews>=1.8.0",
  "cartopy>=0.22.0",
  "datashader>=0.16.0"
]
netcdf = ["netcdf4>=1.6.0"]

[project.urls]
repository = "https://github.com/C2SM/icon4py"

[tool.coverage]

[tool.coverage.html]
directory = 'tests/_reports/coverage_html'

[tool.coverage.paths]
source = ['src/icon4py/model/']

[tool.coverage.report]
exclude_lines = [
  'raise AssertionError',  # Don't complain if tests don't hit defensive assertion code
  'raise NotImplementedError',  # Don't complain if tests don't hit defensive assertion code
  'if 0:',  # Don't complain if non-runnable code isn't run
  'if __name__ == .__main__.:'  # Don't complain if non-runnable code isn't run
]
ignore_errors = true

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ['common']

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = ['^tests/*.py']
ignore_missing_imports = false
implicit_reexport = true
install_types = true
non_interactive = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
log_cli = true

[tool.pytest.ini_options]
addopts = ['-p icon4py.model.common.test_utils.pytest_config']
log_cli = true
markers = [
  "datatest: test depending on serialized data generated by a full model run",
  "with_netcdf: test depending on a compatible version of netCDF4"
]
testpaths = 'tests'

[tool.ruff]
extend-exclude = [
  '.eggs',
  '.gt_cache',
  '.ipynb_checkpoints',
  '.tox',
  '_local_',
  'build',
  'dist',
  'docs',
  '_external_src',
  'tests/_disabled',
  'setup.py'
]
indent-width = 4
line-length = 100
respect-gitignore = true
show-fixes = true
# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ['E', 'F', 'I', 'B', 'A', 'T10', 'ERA', 'NPY', 'RUF']
# # Rules sets:
# E: pycodestyle
# F: Pyflakes
# I: isort
# B: flake8-bugbear
# A: flake8-builtins
# T10: flake8-debugger
# ERA: eradicate
# NPY: NumPy-specific rules
# RUF: Ruff-specific rules
ignore = [
  'E501',  # Line too long (using Bugbear's B950 warning)
  'RUF009'  # Do not perform function call in dataclass defaults
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ['icon4py.model']
known-third-party = [
  'gt4py',
  'icon4pytools'
]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.setuptools.dynamic]
version = {attr = 'icon4py.model.common.__init__.__version__'}

[tool.setuptools.package-data]
'icon4py.model.common' = ['py.typed']
