# -- Build system requirements (PEP 518) --

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.40.0"]

# -- Standard project description options (PEP 621) --
[project]
authors = [{email = "gridtools@cscs.ch", name = "ETH Zurich"}]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics'
]
dependencies = [
  'gt4py==1.0.6',
  'packaging>=20.0',
  'packaging>=20.0',
  'typing-extensions>=4.11.0',
  'numpy>=1.23.3',
  'scipy>=1.14.1'
]
description = "Shared code for the icon4py model."
license = {text = "BSD-3 License"}
name = "icon4py-common"
readme = "README.md"
requires-python = ">=3.10"
# managed by bump-my-version:
version = "0.0.6"

[project.optional-dependencies]
all = ["icon4py-common[dace,distributed,io]"]
cuda11 = ['cupy-cuda11x>=13.0', 'gt4py[cuda11]']
cuda12 = ['cupy-cuda12x>=13.0', 'gt4py[cuda12]']
dace = ["dace>=1.0", "gt4py[next]"]
distributed = ["ghex>=0.3.0", "mpi4py>=3.1.5", "pymetis>2022.1"]
io = [
  # external dependencies
  "cartopy>=0.22.0",
  "cftime>=1.6.3",
  "datashader>=0.16.1",
  "holoviews>=1.16.0",
  "netcdf4>=1.6.1",
  "numpy>=1.23.3",
  "scikit-learn>=1.4.0",
  # TODO [magdalena] there are failing tests starting from uxarray==2024.4.0: when a data file does not have
  # fields of a given dimension (eg 'edge') then something in uxarray goes wrong with the dimension
  # mapping. It is not yet clear whether this is a uxarray bug or on our side.
  "uxarray==2024.3.0",
  "xarray[complete]>=2024.3.0"
]

[project.urls]
repository = "https://github.com/C2SM/icon4py"

# -- bumpversion --
[tool.bumpversion]
allow_dirty = false
commit = false
current_version = "0.0.6"
ignore_missing_version = false
message = 'Bump icon4py-common version: {current_version} → {new_version}'
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)?"
serialize = ["{major}.{minor}.{patch}"]
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = '''
# managed by bump-my-version:
version = "{new_version}"
'''
search = '''
# managed by bump-my-version:
version = "{current_version}"
'''

[[tool.bumpversion.files]]
filename = "src/icon4py/model/common/__init__.py"

# --ruff --
[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ['icon4py']
known-third-party = ['gt4py']

# -- setuptools --
[tool.setuptools.package-data]
'*' = ['*.in', '*.md', '*.rst', '*.txt', 'LICENSE', 'py.typed']

[tool.setuptools.packages]
find = {namespaces = true, where = ['src']}
