# -- Build system requirements (PEP 518) --

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.40.0"]

# -- Standard project description options (PEP 621) --
[project]
authors = [{email = "gridtools@cscs.ch", name = "ETH Zurich"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  # workspace members
  "icon4py-common~=0.2.0",
  # external dependencies
  "packaging>=20.0"
]
description = "ICON physics interface: the PhysicsDriver orchestrating physics processes."
license = {text = "BSD-3 License"}
name = "icon4py-atmosphere-physics-interface"
readme = "README.md"
requires-python = ">=3.10"
# managed by bump-my-version:
version = "0.2.0"

[project.urls]
repository = "https://github.com/C2SM/icon4py"

# --ruff --
[tool.ruff]
extend = "../../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ['icon4py']
known-third-party = ['gt4py']

# -- setuptools --
[tool.setuptools.package-data]
'*' = ['*.in', '*.md', '*.rst', '*.txt', 'LICENSE', 'py.typed']

[tool.setuptools.packages]
find = {namespaces = true, where = ['src']}
